--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "includes\\php_markdown"]
-	path = includes\\php_markdown
+[submodule "includes/php_markdown"]
+	path = includes/php_markdown
 	url = https://github.com/michelf/php-markdown.git
