--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
     {
       "name": "Michael W. Delaney",
       "email": "michael@michaeldelaney.me"
-		}
+    }
   ],
   "type": "wordpress-plugin",
   "require": {
-    "php": ">=5.3.2",
+    "php": ">=5.3.2"
   }
 }
